<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical"
    android:gravity="center"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:gravity="center"
            android:text="@string/page_name2"
            android:textColor="@color/colorText"
            android:textSize="35dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/ca_marks"
                android:textColor="#131312"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/ca_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#171615" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="@string/total_marks"
                android:textColor="#131312"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/total_marks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#171615" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:background="@color/colorBtn"
            android:text="@string/btn_save"
            android:textColor="@color/colorText"

            android:textSize="18sp" />

    </LinearLayout>

    </LinearLayout>